@@ -8,9 +8,11 @@ DIST gcc-4.4.3-patches-1.0.tar.bz2 11853 RMD160 0f77684057cbaf94e81e3128cfbfbbbf
 DIST gcc-4.4.3-uclibc-patches-1.0.tar.bz2 3014 RMD160 4646449073c54a43f1b72382ab3c611789e6cb59 SHA1 7bb2d5ae871f1bbed51198c274518d2c8bc06689 SHA256 4b44eb274f27cc8ffb0e61e90d829a7a87fd0b49df6f31e7cb3071cc96c00df1
 DIST gcc-4.4.3.tar.bz2 62944934 RMD160 b51afac3cb77ee3dc09d29c2f85936482ed82ab2 SHA1 619766282734728539ce58a5c383cb371f1999c7 SHA256 97ed664694b02b4d58ac2cafe443d02a388f9cb3645e7778843b5086a5fec040
 DIST gcc-4.5.0-espf-0.3.9.tar.bz2 15541 RMD160 264e5e857dde1968ed540366a365b3da3625a629 SHA1 9efe87e9c581d23c05fd7fb86953c6ce766d84ba SHA256 5b77c83c34f525c8f9e11199796e0807cf58c097f194d8226dabd926ea0d4ca1
+DIST gcc-4.5.0-patches-1.0.tar.bz2 6709 RMD160 bfcd1d4b195706242eac20693e78293734b03519 SHA1 e7e82ba95611e653efe77ecd601ea25acdfc6f69 SHA256 e2d31437ab4e9fe0145d89d4128446015ae6395c40903ebb1831f74f75e11602
+DIST gcc-4.5.0-uclibc-patches-1.0.tar.bz2 2281 RMD160 860f77f9ae11f24a760cf763b9965ef64dd9d416 SHA1 ec67f80f0b5da78edbe6a85eb3b93090a628f535 SHA256 5faa9c4eac7c67afeae081a936dd6406f11a930c3c240a83d76ffdee74b04e6f
 DIST gcc-4.5.0.tar.bz2 65941778 RMD160 84c9b2bf117ce3e29cba8fa2cd62fa4f8f7f5749 SHA1 4beb8366ce1883f37255aa57f0258e7d3cd13a9b SHA256 8293e9efa68a8ec0fdd0dae9c9bd128a8e742566acd9c8fbcfe79d98ed3756c8
 EBUILD gcc-4.3.4-r3.ebuild 2218 RMD160 e4a0e9b2d9a242de88775192dfff9d6c6a04c6de SHA1 8c4e68c3bf66dda5fce3a4a393db307fc28b411a SHA256 8eab9422f434968b2e279699a294bca203ec3230e7c71e7a7a6642b58902bba5
 EBUILD gcc-4.4.3-r3.ebuild 2155 RMD160 eed88f3289e27a903d5a34032b2973b141ebe827 SHA1 af1a5952a9e4e074122ced66c5619b7816457e01 SHA256 e7005e5109fc77095500812a71854d212a163581a1a7d83a7c43fd61b386983e
-EBUILD gcc-4.5.0.ebuild 2200 RMD160 9e479dc9cf3e25ff53476877e122798b0b2409dc SHA1 7679f65c3abd7616373d042e1bc3d2b7e1b0c83e SHA256 8abce2e84fb7960ffb0689e0864c5ab0c218a0518a51cdbdb8a37bae618c05ba
-MISC ChangeLog 2004 RMD160 9d3796a10290512f16d9820f1ee8fc3aeb82095b SHA1 52ac452f6fd7b546f4557a50b3084086efee5ea7 SHA256 73fa5598a89ad94cbd59ac00cc260f2b4cb7eafa1520d17a7ecce6c6044fc26c
-MISC metadata.xml 1610 RMD160 de3ea2135f71f26100df1cc2c94f969f4fb58a10 SHA1 257abaaec0d10ed04c943b4db78f97833c6303ba SHA256 e0d36c00b5814e330850f731e2a4af8f9a1b77fde6499ce3964b7995520b13f6
+EBUILD gcc-4.5.0.ebuild 1992 RMD160 22be7d94fdbf2a6f570eca58f3bb82a98cd80e08 SHA1 ede2eac1089ac3b24f6663ee852a32505bae0bb9 SHA256 41cfc0ac4830f7f498c0c8e03d152964c1dec0257f87d8ed34e1be04265d64cb
+MISC ChangeLog 2162 RMD160 128352c4a0cfb1425436ee867b580495ae45e2f4 SHA1 1498049db517927949d470eff466f852cee23ced SHA256 8d44098e6dd4187c9017ea3bccd14fd28fa906e5c19e1718adaf655f506239a7
+MISC metadata.xml 1678 RMD160 7d8df302684ecf0e23caf763d3fcee267d40866b SHA1 f9a035b4a7bf8a6fbf9e1627f777b86f30813517 SHA256 3e67d554a8e3135943623ab276d6871582fda0cdb556d31531b369d8c0b277d7
