@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Apr 2010; Peter Hjalmarsson <xake@gentoo.org> gcc-4.5.0.ebuild,
+  metadata.xml:
+  Updated ebuild against portage, adding patchsets and upping som deps.
+
 *gcc-4.5.0 (15 Apr 2010)
 
   15 Apr 2010; <zorry@gentoo.org> +gcc-4.5.0.ebuild:
